--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.1.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.15.6",
+    "date-fns": "^2.21.3",
+    "google-distance-matrix": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-math": "0.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "use-places-autocomplete": "^1.9.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
